[tool.poetry]
name = "edayot"
version = "0.1.0"
description = ""
authors = ["edayot <pro.e.dayot@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^7.1.1"
sphinx_design = "^0.5.0"
sphinx-pyproject = "^0.1.0"
sphinx-autobuild = "^2021.3.14"
pygments= "^2.15.1"
myst-parser = "^2.0.0"
sphinxcontrib-mermaid = "^0.7.1"
sphinx_copybutton = "^0.5.2"
furo = "^2023.7.26"
linkify-it-py = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
